style(client): fix uneven margin in Navbar modal

--- a/limjiwoo_blog/src/containers/Navbar/navbar.css
+++ b/limjiwoo_blog/src/containers/Navbar/navbar.css
@@ -50,7 +50,7 @@
 .blog__modal-container {
     display: flex;
     flex-direction: column;
-    margin: 1rem 1rem 0 1rem;
+    margin: 1rem 1rem .5rem 1rem;
 }
 
 .blog__modal-input {
